KAFKA-18641: Address by comments